# parmt

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
CMakeModules/: FindCPS.cmake  FindCompearth.cmake  FindIPP.cmake  FindISCL.cmake  FindMKL.cmake  FindParMT.cmake.in  FindSacio.cmake  FindTTimes.cmake
compearth/: CMT2m0.c  CMakeLists.txt  angleMT.c  compearth.h  config.h.in  convertMT.c  eulerUtil_rotmatGen.c  h2theta.c  lune2rect.c  m02hdur.c  m02mw.c  normMT.c  normMat.c  rect2lune.c  tt2cmt.c  xyz2tp.c
include/: CMakeLists.txt  config.h.in  parmt_invert.h  parmt_mtsearch.h  parmt_polarity.h  parmt_postProcess.h  parmt_utils.h
include/prepmt/: CMakeLists.txt  config.h.in  prepmt.h  prepmt_commands.h  prepmt_dataArchive.h  prepmt_event.h  prepmt_greens.h  prepmt_hpulse96.h  prepmt_hudson96.h  prepmt_pickFile.h  prepmt_prepData.h  prepmt_struct.h
io/: dataArchive.c  objfnArchive.c
postprocess/: beachball.c  beachball.h  cellSpacing.c  gmtHelper.c  lune.c  marginal.c  postmt.c  postprocess.c  tt2beachball.c
prepmt/: commands.c  dataArchive.c  event.c  greens.c  grnsRegSW.c  grnsTeleB.c  hpulse96.c  hspec96.c  hudson96.c  pickFile.c  prepData.c  prepRegSW.c  prepTeleP.c  prepTeleS.c
src/: aki496.c  broadcast.c  discretizeMT.c  invert.c  locsearch.c  magnitude.c  mergemt.c  mtsearch.c  obssearch.c  parmt.c  polarity.c  polarmt.c  splitComm.c  stackedCrossCorrelation.c  synthetic.c  unit_tests.c
testing/rotation_data/: B00101ZDD.sac  B00102RDD.sac  B00103ZDS.sac  B00104RDS.sac  B00105TDS.sac  B00106ZSS.sac  B00107RSS.sac  B00108TSS.sac  B00109ZEX.sac  B00110REX.sac  B00201Z00.sac  B00201ZDD.sac  B00202N00.sac  B00202RDD.sac  B00203E00.sac  B00203ZDS.sac  B00204RDS.sac  B00205TDS.sac  B00206ZSS.sac  B00207RSS.sac  B00208TSS.sac  B00209ZEX.sac  B00210REX.sac  xx101.hhe.sac  xx101.hhn.sac  xx101.hhz.sac  xy101.hhe.sac  xy101.hhn.sac  xy101.hhz.sac  xz101.hhe.sac  xz101.hhn.sac  xz101.hhz.sac  yy101.hhe.sac  yy101.hhn.sac  yy101.hhz.sac  yz101.hhe.sac  yz101.hhn.sac  yz101.hhz.sac  zz101.hhe.sac  zz101.hhn.sac  (+1 more)
utils/: ff2mtGreens.c  getComponent.c  getNoiseBasis.c  lagTime.c  mkgrns.c  readini.c  sacGrnsToEst.c  setDataOnG.c  unit_tests.c  weights.c
